--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,17 @@
 {
-  "extends": "airbnb-base",
+  "extends": "airbnb",
+  "rules": {
+    "no-console": "off",
+    "comma-dangle": "off",
+    "quotes": "off",
+    "react/prop-types": 0,
+    "arrow-body-style": 0,
+    "space-before-function-paren": 0,
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "react/prefer-stateless-function": 0
+  },
   "env": {
     "browser": true
   },
-  "rules": {
-    "no-console": "off",
-    "no-alert": "off",
-    "comma-dangle": "off",
-    "quotes": "off",
-    "no-unused-vars": "off",
-    "no-param-reassign": "off",
-    "class-methods-use-this": "off",
-    "import/prefer-default-export": "off",
-    "prefer-destructuring": "off"
-  }
+  "parser": "babel-eslint"
 }
